# Kerr-Descent-Engine

./: Description  LICENSE  README.md  Requirements  critical_events_7_8.txt  geometry.py  pipeline6_3.py  pipeline6_4.py  pipeline7_0.py  pipeline7_2.py  pipeline7_3.py  pipeline7_4.py  pipeline7_5.py  pipeline7_6.py  pipeline7_7.py  pipeline7_8.py  pipeline_7_1.py  pyproject.toml  region_log_7_1.txt  region_log_7_6.txt  src  summary_7_1.txt
docs/docs/: index.md
notebooks/: example.ipynb  pipeline6_3.ipynb
src/: __init__.py  descent.py  engine.py  geometry.py  metrics.py  pipeline6_3.py
tests/: test_engine.py
